# lg-hue-automation

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: devices.py  diagnostics.py  scenes.py
backend/app/services/: diagnostics.py  ha_client.py  scene_engine.py
backend/scenes/: scenes.yaml
backend/tests/: test_diagnostics.py  test_ha_client.py  test_scenes.py
docs/: server-setup.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: device-status.tsx  diagnostics-panel.tsx  header.tsx  pwa-register.tsx  scene-card-skeleton.tsx  scene-card.tsx
frontend/lib/: api.ts
frontend/public/: manifest.json  sw.js
k8s/: README.md  deployment.yaml
nginx/: nginx.conf
